# timbear

./: Cargo.toml  Dockerfile  fields.json  timbas.db  timbear.sh
src/: db.rs  handlers.rs  main.rs  models.rs
static/: index.html
