[package]
name = "timbear"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower-cookies = "0.10"
uuid = { version = "1.11", features = ["v4"] }
time = "0.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
axum-extra = { version = "0.10.3", features = ["cookie"] }
